# bc_capstone_26

./: LICENSE  Makefile  README.md  pyproject.toml
bc_capstone_26/: __init__.py  dataset.py  features.py  plots.py
bc_capstone_26/modeling/: predict.py  train.py
docs/: mkdocs.yml  reflection.txt  todo.txt
docs/docs/: index.md
notebooks/: Third_Assignment.ipynb
