[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bc_capstone_26"
version = "0.0.1"
description = "Prof Sem_Major Assignment: Version Control Workflow with Cookie Cutter Project Template"
authors = [
  { name = "Paula R" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.10,<3.12"


[tool.ruff]
line-length = 99
src = ["bc_capstone_26"]
include = ["pyproject.toml", "bc_capstone_26/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["bc_capstone_26"]
force-sort-within-sections = true

